bug fixes and test deletions